// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for PrometheusHealthSource Load in editmode for template with runtime values 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main tabWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_setup-sources_0"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="0"
          id="bp3-tab-title_setup-sources_0"
          role="tab"
          tabindex="0"
        >
          MapMetrics
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_setup-sources_0"
        class="bp3-tab-panel"
        id="bp3-tab-panel_setup-sources_0"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main contentContainer"
                >
                  <div
                    class="StyledProps--font StyledProps--main leftPanel"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-plus StyledProps--main"
                          icon="plus"
                        >
                          <svg
                            data-icon="plus"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              plus
                            </desc>
                            <path
                              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          cv.monitoringSources.addMetric
                        </span>
                      </button>
                      <div
                        class="StyledProps--font StyledProps--main main"
                      >
                        <div
                          class="StyledProps--font StyledProps--main main metricsFilter"
                        >
                          <div
                            class="TextInput--main"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <span
                                class="bp3-icon bp3-icon-search StyledProps--main"
                                icon="search"
                              >
                                <svg
                                  data-icon="search"
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                >
                                  <desc>
                                    search
                                  </desc>
                                  <path
                                    d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <input
                                class="bp3-input"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <div
                            class="StyledProps--font StyledProps--main CollapseListPanel--main collapsePanel"
                          >
                            <div
                              class="StyledProps--font StyledProps--main CollapseHeader--main"
                            >
                              <div
                                class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                              >
                                <span
                                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary6"
                                  data-icon="main-chevron-right"
                                >
                                  <svg
                                    height="10"
                                    viewBox="0 0 8 14"
                                    width="10"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                      fill="#4d5969"
                                    />
                                  </svg>
                                </span>
                                <p
                                  class="StyledProps--font StyledProps--main selectedApp collapseHeading StyledProps--color StyledProps--color-grey900 StyledProps--font-weight-semi-bold StyledProps--font-size-normal"
                                >
                                  g1
                                </p>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main"
                              />
                            </div>
                            <div
                              class="StyledProps--font StyledProps--main CollapseListPanel--collapse"
                            >
                              <div
                                class="bp3-collapse"
                                style="height: auto; overflow-y: visible; transition: none;"
                              >
                                <div
                                  aria-hidden="false"
                                  class="bp3-collapse-body"
                                  style="transform: translateY(0); transition: none;"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main seletedAppContainer"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main selectedApp isSelected"
                                      style="--text-line-clamp: 1;"
                                    >
                                      Prometheus Metric
                                    </p>
                                  </div>
                                  <div
                                    class="StyledProps--font StyledProps--main CollapseListPanel--footerContent"
                                  >
                                    <button
                                      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
                                      type="button"
                                    >
                                      <span
                                        class="bp3-button-text"
                                      >
                                        Next
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main content"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main emptyCardHeader"
                      >
                        <div
                          class="StyledProps--font StyledProps--main content"
                        >
                          <h2
                            class="StyledProps--font StyledProps--font-h2 StyledProps--main mainHeading"
                            level="2"
                          >
                            cv.monitoringSources.prometheus.querySpecificationsAndMappings
                          </h2>
                          <p
                            class="StyledProps--font StyledProps--main subHeading"
                          >
                            cv.monitoringSources.prometheus.customizeQuery
                          </p>
                        </div>
                        <hr
                          class="headingDivider"
                        />
                      </div>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xlarge StyledProps--main content"
                      >
                        <div
                          class="Accordion--accordion accordian"
                        >
                          <div
                            class="Accordion--panel"
                            data-open="true"
                            data-testid="metricToService-panel"
                          >
                            <div
                              class="Accordion--summary"
                              data-testid="metricToService-summary"
                            >
                              <div
                                class="Accordion--label"
                              >
                                cv.monitoringSources.mapMetricsToServices
                              </div>
                              <div
                                class="Accordion--chevron"
                              />
                            </div>
                            <div
                              class="bp3-collapse Accordion--collapse"
                              style="height: auto; overflow-y: visible; transition: none;"
                            >
                              <div
                                aria-hidden="false"
                                class="bp3-collapse-body"
                                style="transform: translateY(0); transition: none;"
                              >
                                <div
                                  class="Accordion--details"
                                  data-testid="metricToService-details"
                                >
                                  <div
                                    class="InputWithIdentifier--txtNameContainer TextInput--main"
                                  >
                                    <div
                                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                                    >
                                      <div
                                        class="Text--withDocsTooltip"
                                        data-tooltip-id="universalInputNameWithId"
                                      >
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          Id
                                        </p>
                                      </div>
                                      <p
                                        class="StyledProps--font StyledProps--main"
                                      >
                                        :
                                      </p>
                                      <span
                                        class="bp3-popover-wrapper"
                                      >
                                        <span
                                          class="bp3-popover-target"
                                        >
                                          <div
                                            class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                                          >
                                            <span
                                              class="bp3-editable-text-content"
                                              style="height: 1px; line-height: 1px; min-width: 0;"
                                            >
                                              prometheus_metric
                                            </span>
                                          </div>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="bp3-form-group"
                                      data-id="metricName-0"
                                    >
                                      <label
                                        class="bp3-label"
                                        for="metricName"
                                      >
                                        <span
                                          class="Tooltip--acenter"
                                          data-tooltip-id="mapPrometheus_metricName"
                                        >
                                          cv.monitoringSources.metricNameLabel
                                        </span>
                                         
                                        <span
                                          class="bp3-text-muted"
                                        />
                                      </label>
                                      <div
                                        class="bp3-form-content"
                                      >
                                        <div
                                          class="bp3-input-group"
                                        >
                                          <input
                                            autocomplete="off"
                                            class="bp3-input"
                                            name="metricName"
                                            placeholder="common.namePlaceholder"
                                            type="text"
                                            value="Prometheus Metric"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="bp3-form-group"
                                    data-id="groupName-1"
                                  >
                                    <label
                                      class="bp3-label"
                                      for="groupName"
                                    >
                                      <span
                                        class="Tooltip--acenter"
                                        data-tooltip-id="mapPrometheus_groupName"
                                      >
                                        cv.monitoringSources.prometheus.groupName
                                      </span>
                                       
                                      <span
                                        class="bp3-text-muted"
                                      />
                                    </label>
                                    <div
                                      class="bp3-form-content"
                                    >
                                      <div
                                        class="bp3-popover-wrapper Select--main bp3-fill"
                                      >
                                        <div
                                          class="bp3-popover-target"
                                        >
                                          <div
                                            class="bp3-input-group"
                                          >
                                            <input
                                              autocomplete="off"
                                              class="bp3-input"
                                              name="groupName"
                                              placeholder="- Select -"
                                              style="padding-right: 0px;"
                                              type="text"
                                              value="g1"
                                            />
                                            <span
                                              class="bp3-input-action"
                                            >
                                              <span
                                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                                icon="chevron-down"
                                              >
                                                <svg
                                                  data-icon="chevron-down"
                                                  height="14"
                                                  viewBox="0 0 16 16"
                                                  width="14"
                                                >
                                                  <desc>
                                                    chevron-down
                                                  </desc>
                                                  <path
                                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                    fill-rule="evenodd"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Accordion--panel"
                            data-open="false"
                            data-testid="assign-panel"
                          >
                            <div
                              class="Accordion--summary"
                              data-testid="assign-summary"
                            >
                              <div
                                class="Accordion--label"
                              >
                                cv.monitoringSources.assign
                              </div>
                              <div
                                class="Accordion--chevron"
                              />
                            </div>
                            <div
                              class="bp3-collapse Accordion--collapse"
                            >
                              <div
                                aria-hidden="false"
                                class="bp3-collapse-body"
                                style="transform: translateY(-undefinedpx);"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main main"
                        >
                          <div
                            class="bp3-form-group formGroup"
                            data-id="query-2"
                          >
                            <label
                              class="bp3-label"
                              for="query"
                            >
                              <div
                                class="formLabel"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="mapPrometheus_query"
                                >
                                  cv.query
                                </span>
                                <div
                                  class="bp3-popover-wrapper typeSelectorWrapper"
                                >
                                  <div
                                    class="bp3-popover-target typeSelector"
                                  >
                                    <button
                                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                      type="button"
                                    >
                                      <span
                                        class="bp3-button-text"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main icon runtime"
                                          data-icon="runtime-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 10 7.97"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                              fill="current-color"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-form-group bp3-disabled runtimeDisabled"
                                data-id="query-3"
                              >
                                
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="bp3-input-group bp3-disabled"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      disabled=""
                                      name="query"
                                      type="text"
                                      value="<+input>"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="StyledProps--font StyledProps--main queryAndRecords"
                          >
                            <p
                              class="StyledProps--font StyledProps--main labelText"
                            >
                              cv.monitoringSources.gcoLogs.records
                            </p>
                            <div
                              class="StyledProps--font StyledProps--main chartContainer"
                            >
                              <p
                                class="StyledProps--font StyledProps--main noQueryChart centerElement"
                                style="display: flex; align-items: center;"
                              >
                                <span
                                  class="bp3-icon bp3-icon-timeline-line-chart StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--intent-success"
                                  icon="timeline-line-chart"
                                >
                                  <svg
                                    data-icon="timeline-line-chart"
                                    height="50"
                                    viewBox="0 0 20 20"
                                    width="50"
                                  >
                                    <desc>
                                      timeline-line-chart
                                    </desc>
                                    <path
                                      d="M19 16H2v-1.59l5-5 3.29 3.29c.18.19.43.3.71.3s.53-.11.71-.29l7-7a1.003 1.003 0 00-1.42-1.42L11 10.59l-3.29-3.3C7.53 7.11 7.28 7 7 7s-.53.11-.71.29L2 11.59V3c0-.55-.45-1-1-1s-1 .45-1 1v14a.998.998 0 001 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                                cv.customHealthSource.chartRuntimeWarning
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main rightPanel"
                  />
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-top: 120px;"
              />
              <div
                class="StyledProps--font StyledProps--main footerCta footer"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="bp3-spinner bp3-button-spinner"
                  >
                    <div
                      class="bp3-spinner-animation"
                    >
                      <svg
                        height="20"
                        stroke-width="16.00"
                        viewBox="-3.00 -3.00 106.00 106.00"
                        width="20"
                      >
                        <path
                          class="bp3-spinner-track"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        />
                        <path
                          class="bp3-spinner-head"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          pathLength="280"
                          stroke-dasharray="280 280"
                          stroke-dashoffset="210"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    submit
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for PrometheusHealthSource load in edit case with fixed values 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="StyledProps--font StyledProps--main contentContainer"
          >
            <div
              class="StyledProps--font StyledProps--main leftPanel"
            >
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    cv.monitoringSources.addMetric
                  </span>
                </button>
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="StyledProps--font StyledProps--main main metricsFilter"
                  >
                    <div
                      class="TextInput--main"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <span
                          class="bp3-icon bp3-icon-search StyledProps--main"
                          icon="search"
                        >
                          <svg
                            data-icon="search"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              search
                            </desc>
                            <path
                              d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <input
                          class="bp3-input"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main CollapseListPanel--main collapsePanel"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary6"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main selectedApp collapseHeading StyledProps--color StyledProps--color-grey900 StyledProps--font-weight-semi-bold StyledProps--font-size-normal"
                          >
                            g1
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main CollapseListPanel--collapse"
                      >
                        <div
                          class="bp3-collapse"
                          style="height: auto; overflow-y: visible; transition: none;"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(0); transition: none;"
                          >
                            <div
                              class="StyledProps--font StyledProps--main seletedAppContainer"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main selectedApp isSelected"
                                style="--text-line-clamp: 1;"
                              >
                                Prometheus Metric
                              </p>
                            </div>
                            <div
                              class="StyledProps--font StyledProps--main CollapseListPanel--footerContent"
                            >
                              <button
                                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  Next
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main content"
            >
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main emptyCardHeader"
                >
                  <div
                    class="StyledProps--font StyledProps--main content"
                  >
                    <h2
                      class="StyledProps--font StyledProps--font-h2 StyledProps--main mainHeading"
                      level="2"
                    >
                      cv.monitoringSources.prometheus.querySpecificationsAndMappings
                    </h2>
                    <p
                      class="StyledProps--font StyledProps--main subHeading"
                    >
                      cv.monitoringSources.prometheus.customizeQuery
                    </p>
                  </div>
                  <hr
                    class="headingDivider"
                  />
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-xlarge StyledProps--main content"
                >
                  <div
                    class="Accordion--accordion accordian"
                  >
                    <div
                      class="Accordion--panel"
                      data-open="true"
                      data-testid="metricToService-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="metricToService-summary"
                      >
                        <div
                          class="Accordion--label"
                        >
                          cv.monitoringSources.mapMetricsToServices
                        </div>
                        <div
                          class="Accordion--chevron"
                        />
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="Accordion--details"
                            data-testid="metricToService-details"
                          >
                            <div
                              class="InputWithIdentifier--txtNameContainer TextInput--main"
                            >
                              <div
                                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                              >
                                <div
                                  class="Text--withDocsTooltip"
                                  data-tooltip-id="universalInputNameWithId"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    Id
                                  </p>
                                </div>
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  :
                                </p>
                                <span
                                  class="bp3-popover-wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <div
                                      class="bp3-editable-text InputWithIdentifier--idValue"
                                      tabindex="0"
                                    >
                                      <span
                                        class="bp3-editable-text-content"
                                        style="height: 1px; line-height: 1px; min-width: 0;"
                                      >
                                        prometheus_metric
                                      </span>
                                    </div>
                                  </span>
                                </span>
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="Edit"
                                  style="vertical-align: middle; cursor: pointer;"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 16 16"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                      opacity="0.3"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="bp3-form-group"
                                data-id="metricName-0"
                              >
                                <label
                                  class="bp3-label"
                                  for="metricName"
                                >
                                  <span
                                    class="Tooltip--acenter"
                                    data-tooltip-id="mapPrometheus_metricName"
                                  >
                                    cv.monitoringSources.metricNameLabel
                                  </span>
                                   
                                  <span
                                    class="bp3-text-muted"
                                  />
                                </label>
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="metricName"
                                      placeholder="common.namePlaceholder"
                                      type="text"
                                      value="Prometheus Metric"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="groupName-1"
                            >
                              <label
                                class="bp3-label"
                                for="groupName"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="mapPrometheus_groupName"
                                >
                                  cv.monitoringSources.prometheus.groupName
                                </span>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-popover-wrapper Select--main bp3-fill"
                                >
                                  <div
                                    class="bp3-popover-target"
                                  >
                                    <div
                                      class="bp3-input-group"
                                    >
                                      <input
                                        autocomplete="off"
                                        class="bp3-input"
                                        name="groupName"
                                        placeholder="- Select -"
                                        style="padding-right: 0px;"
                                        type="text"
                                        value="g1"
                                      />
                                      <span
                                        class="bp3-input-action"
                                      >
                                        <span
                                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                          icon="chevron-down"
                                        >
                                          <svg
                                            data-icon="chevron-down"
                                            height="14"
                                            viewBox="0 0 16 16"
                                            width="14"
                                          >
                                            <desc>
                                              chevron-down
                                            </desc>
                                            <path
                                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                              fill-rule="evenodd"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Accordion--panel"
                      data-open="false"
                      data-testid="assign-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="assign-summary"
                      >
                        <div
                          class="Accordion--label"
                        >
                          cv.monitoringSources.assign
                        </div>
                        <div
                          class="Accordion--chevron"
                        />
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main main"
                  >
                    <div
                      class="bp3-form-group formGroup"
                      data-id="query-2"
                    >
                      <label
                        class="bp3-label"
                        for="query"
                      >
                        <div
                          class="formLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="mapPrometheus_query"
                          >
                            cv.query
                          </span>
                          <div
                            class="bp3-popover-wrapper typeSelectorWrapper"
                          >
                            <div
                              class="bp3-popover-target typeSelector"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main icon runtime"
                                    data-icon="runtime-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 10 7.97"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                        fill="current-color"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-form-group bp3-disabled runtimeDisabled"
                        >
                          
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="query"
                                type="text"
                                value="<+input>"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main queryAndRecords"
                    >
                      <p
                        class="StyledProps--font StyledProps--main labelText"
                      >
                        cv.monitoringSources.gcoLogs.records
                      </p>
                      <div
                        class="StyledProps--font StyledProps--main chartContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main noQueryChart centerElement"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon bp3-icon-timeline-line-chart StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--intent-success"
                            icon="timeline-line-chart"
                          >
                            <svg
                              data-icon="timeline-line-chart"
                              height="50"
                              viewBox="0 0 20 20"
                              width="50"
                            >
                              <desc>
                                timeline-line-chart
                              </desc>
                              <path
                                d="M19 16H2v-1.59l5-5 3.29 3.29c.18.19.43.3.71.3s.53-.11.71-.29l7-7a1.003 1.003 0 00-1.42-1.42L11 10.59l-3.29-3.3C7.53 7.11 7.28 7 7 7s-.53.11-.71.29L2 11.59V3c0-.55-.45-1-1-1s-1 .45-1 1v14a.998.998 0 001 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          cv.customHealthSource.chartRuntimeWarning
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main rightPanel"
            />
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="margin-top: 120px;"
        />
        <div
          class="StyledProps--font StyledProps--main footerCta footer"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-left StyledProps--main"
              icon="chevron-left"
            >
              <svg
                data-icon="chevron-left"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-left
                </desc>
                <path
                  d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              previous
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              submit
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Unit tests for PrometheusHealthSource should render in create mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="StyledProps--font StyledProps--main contentContainer"
          >
            <div
              class="StyledProps--font StyledProps--main leftPanel"
            >
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    cv.monitoringSources.addMetric
                  </span>
                </button>
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="StyledProps--font StyledProps--main main metricsFilter"
                  >
                    <div
                      class="TextInput--main"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <span
                          class="bp3-icon bp3-icon-search StyledProps--main"
                          icon="search"
                        >
                          <svg
                            data-icon="search"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              search
                            </desc>
                            <path
                              d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <input
                          class="bp3-input"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main CollapseListPanel--main collapsePanel"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary6"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main selectedApp collapseHeading StyledProps--color StyledProps--color-grey900 StyledProps--font-weight-semi-bold StyledProps--font-size-normal"
                          >
                            cv.addGroupName
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main CollapseListPanel--collapse"
                      >
                        <div
                          class="bp3-collapse"
                          style="height: auto; overflow-y: visible; transition: none;"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(0); transition: none;"
                          >
                            <div
                              class="StyledProps--font StyledProps--main seletedAppContainer"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main selectedApp isSelected"
                                style="--text-line-clamp: 1;"
                              >
                                cv.monitoringSources.prometheus.prometheusMetric
                              </p>
                            </div>
                            <div
                              class="StyledProps--font StyledProps--main CollapseListPanel--footerContent"
                            >
                              <button
                                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  Next
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main content"
            >
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main emptyCardHeader"
                >
                  <div
                    class="StyledProps--font StyledProps--main content"
                  >
                    <h2
                      class="StyledProps--font StyledProps--font-h2 StyledProps--main mainHeading"
                      level="2"
                    >
                      cv.monitoringSources.prometheus.querySpecificationsAndMappings
                    </h2>
                    <p
                      class="StyledProps--font StyledProps--main subHeading"
                    >
                      cv.monitoringSources.prometheus.customizeQuery
                    </p>
                  </div>
                  <hr
                    class="headingDivider"
                  />
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-xlarge StyledProps--main content"
                >
                  <div
                    class="Accordion--accordion accordian"
                  >
                    <div
                      class="Accordion--panel"
                      data-open="false"
                      data-testid="metricToService-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="metricToService-summary"
                      >
                        <div
                          class="Accordion--label"
                        >
                          cv.monitoringSources.mapMetricsToServices
                        </div>
                        <div
                          class="Accordion--chevron"
                        />
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                        style="height: auto;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0);"
                        >
                          <div
                            class="Accordion--details"
                            data-testid="metricToService-details"
                          >
                            <div
                              class="InputWithIdentifier--txtNameContainer TextInput--main"
                            >
                              <div
                                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                              >
                                <div
                                  class="Text--withDocsTooltip"
                                  data-tooltip-id="universalInputNameWithId"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    Id
                                  </p>
                                </div>
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  :
                                </p>
                                <span
                                  class="bp3-popover-wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <div
                                      class="bp3-editable-text InputWithIdentifier--idValue"
                                      tabindex="0"
                                    >
                                      <span
                                        class="bp3-editable-text-content"
                                        style="height: 1px; line-height: 1px; min-width: 0;"
                                      >
                                        prometheus_metric
                                      </span>
                                    </div>
                                  </span>
                                </span>
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="Edit"
                                  style="vertical-align: middle; cursor: pointer;"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 16 16"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                      opacity="0.3"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="bp3-form-group"
                                data-id="metricName-0"
                              >
                                <label
                                  class="bp3-label"
                                  for="metricName"
                                >
                                  <span
                                    class="Tooltip--acenter"
                                    data-tooltip-id="mapPrometheus_metricName"
                                  >
                                    cv.monitoringSources.metricNameLabel
                                  </span>
                                   
                                  <span
                                    class="bp3-text-muted"
                                  />
                                </label>
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="metricName"
                                      placeholder="common.namePlaceholder"
                                      type="text"
                                      value="cv.monitoringSources.prometheus.prometheusMetric"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="groupName-1"
                            >
                              <label
                                class="bp3-label"
                                for="groupName"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="mapPrometheus_groupName"
                                >
                                  cv.monitoringSources.prometheus.groupName
                                </span>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-popover-wrapper Select--main bp3-fill"
                                >
                                  <div
                                    class="bp3-popover-target"
                                  >
                                    <div
                                      class="bp3-input-group"
                                    >
                                      <input
                                        autocomplete="off"
                                        class="bp3-input"
                                        name="groupName"
                                        placeholder="- Select -"
                                        style="padding-right: 0px;"
                                        type="text"
                                        value=""
                                      />
                                      <span
                                        class="bp3-input-action"
                                      >
                                        <span
                                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                          icon="chevron-down"
                                        >
                                          <svg
                                            data-icon="chevron-down"
                                            height="14"
                                            viewBox="0 0 16 16"
                                            width="14"
                                          >
                                            <desc>
                                              chevron-down
                                            </desc>
                                            <path
                                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                              fill-rule="evenodd"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Accordion--panel"
                      data-open="true"
                      data-testid="assign-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="assign-summary"
                      >
                        <div
                          class="Accordion--label"
                        >
                          cv.monitoringSources.assign
                        </div>
                        <div
                          class="Accordion--chevron"
                        />
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                        style="height: 0px;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0);"
                        >
                          <div
                            class="Accordion--details"
                            data-testid="assign-details"
                          >
                            <div
                              class="StyledProps--font StyledProps--main main"
                            >
                              <div
                                class="StyledProps--font StyledProps--main checkBoxGroup"
                              >
                                <div
                                  class="Text--withDocsTooltip"
                                  data-tooltip-id="assignLabel"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main groupLabel"
                                  >
                                    cv.monitoredServices.assignLabel
                                  </p>
                                </div>
                                <div
                                  class="bp3-form-group"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <label
                                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                    >
                                      <input
                                        name="sli"
                                        type="checkbox"
                                      />
                                      <span
                                        class="bp3-control-indicator"
                                      />
                                      <span
                                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                        data-tooltip-id="mapPrometheus_sli"
                                      >
                                        cv.slos.sli
                                      </span>
                                    </label>
                                  </div>
                                </div>
                                <div
                                  class="bp3-form-group"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <label
                                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                    >
                                      <input
                                        name="healthScore"
                                        type="checkbox"
                                      />
                                      <span
                                        class="bp3-control-indicator"
                                      />
                                      <span
                                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                        data-tooltip-id="mapPrometheus_healthScore"
                                      >
                                        cv.monitoredServices.monitoredServiceTabs.serviceHealth
                                      </span>
                                    </label>
                                  </div>
                                </div>
                                <div
                                  class="bp3-form-group"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <label
                                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                                    >
                                      <input
                                        name="continuousVerification"
                                        type="checkbox"
                                      />
                                      <span
                                        class="bp3-control-indicator"
                                      />
                                      <span
                                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                                        data-tooltip-id="mapPrometheus_continuousVerification"
                                      >
                                        cv.monitoredServices.continuousVerification
                                      </span>
                                    </label>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main main"
                  >
                    <div
                      class="bp3-form-group formGroup"
                      data-id="query-2"
                    >
                      <label
                        class="bp3-label"
                        for="query"
                      >
                        <div
                          class="formLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="mapPrometheus_query"
                          >
                            cv.query
                          </span>
                          <div
                            class="bp3-popover-wrapper typeSelectorWrapper"
                          >
                            <div
                              class="bp3-popover-target typeSelector"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main icon runtime"
                                    data-icon="runtime-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 10 7.97"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                        fill="current-color"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-form-group bp3-disabled runtimeDisabled"
                          data-id="query-3"
                        >
                          
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="query"
                                type="text"
                                value="<+input>"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main queryAndRecords"
                    >
                      <p
                        class="StyledProps--font StyledProps--main labelText"
                      >
                        cv.monitoringSources.gcoLogs.records
                      </p>
                      <div
                        class="StyledProps--font StyledProps--main chartContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main noQueryChart centerElement"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon bp3-icon-timeline-line-chart StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--intent-success"
                            icon="timeline-line-chart"
                          >
                            <svg
                              data-icon="timeline-line-chart"
                              height="50"
                              viewBox="0 0 20 20"
                              width="50"
                            >
                              <desc>
                                timeline-line-chart
                              </desc>
                              <path
                                d="M19 16H2v-1.59l5-5 3.29 3.29c.18.19.43.3.71.3s.53-.11.71-.29l7-7a1.003 1.003 0 00-1.42-1.42L11 10.59l-3.29-3.3C7.53 7.11 7.28 7 7 7s-.53.11-.71.29L2 11.59V3c0-.55-.45-1-1-1s-1 .45-1 1v14a.998.998 0 001 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          cv.customHealthSource.chartRuntimeWarning
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main rightPanel"
            />
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="margin-top: 120px;"
        />
        <div
          class="StyledProps--font StyledProps--main footerCta footer"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-left StyledProps--main"
              icon="chevron-left"
            >
              <svg
                data-icon="chevron-left"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-left
                </desc>
                <path
                  d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              previous
            </span>
          </button>
          <button
            class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              submit
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
